--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         </div>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/jessmacqueen" target="_blank">Linkedin</a>
+                        <a href="https://www.linkedin.com/in/jessmacqueen" target="_blank">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="https://github.com/macqueen/" target="_blank">Github</a>
+                        <a href="https://github.com/macqueen/" target="_blank">GitHub</a>
                     </li>
                 </ul>
             </div>
