update draggy demo

--- a/draggy.html
+++ b/draggy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>dragy</title>
+    <title>draggy</title>
     <link href="css/draggy.css" rel="stylesheet">
 </head>
 <body>
